# sdlgpuclient

./: .gitignore  CMakeLists.txt  CMakePresets.json  justfile
shader-src/: fill.frag  fillcolor.vert  ndc.glsl  rect.frag  rect.vert
src/: canvas.hpp  common.hpp  gpu-pipelines.hpp  main.cpp  rect.hpp  render-context.hpp  render.hpp  sdl.hpp  time.hpp
